--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+  --bg-root: #e6f8d7;
+  --color-white: #fff;
+  --color-gray: #757575;
+  --color-red: #d41c0e;
+  --border-color-gray: #a5a5a7;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
