--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,17 +1,12 @@
 .section {
-  padding: 50px;
-  height: 100vh;
-  background-color: var(--bg-root);
-}
-
-.container {
   display: flex;
   flex-direction: column;
   gap: 20px;
   width: 350px;
+  margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px;
+  padding: 20px;
   background-color: var(--color-white);
   box-shadow: 0px 2px 7px 2px #a2aca0af;
   border-radius: 5px;
